--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
 	],
 	"require" : {
 		"php" : ">=5.3.0",
-		"doctrine/dbal": "^4.0@dev"
+		"doctrine/dbal": "^3.0.0"
 	},
 	"autoload" : {
 		"psr-0" : {
