--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
 	],
 	"require" : {
 		"php" : ">=5.3.0",
-		"doctrine/dbal": "^3.0.0"
+		"doctrine/dbal": "dev-master"
 	},
 	"autoload" : {
 		"psr-0" : {
@@ -48,5 +48,5 @@
 		}
 	    }
 	},
-  "version": "1.5.7"
+  "version": "1.5.8"
 }
